--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
     <string name="app_name">Youtube test</string>
+    <string name="error_player">There was an error initializing the YouTubePlayer</string>
+    <string name="landscape_fullscreen">Click on check for full screen video in landscape mode</string>
+    <string name="enter_fullscreen">Enter Fullscreen</string>
 </resources>
